--- a/css/timeline.css
+++ b/css/timeline.css
@@ -49,25 +49,23 @@ li {
 } */
 
 .js-container {
-    background-color: blue;
+    border: solid blue 3px; 
     width: 3200px;
     height: auto;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-gap: 20px;
     margin: 50px auto;
-    /* padding-top: 5rem;
-    padding-bottom: 6rem; */
 }
 
 .js-filter  {
-    /* position: fixed; */
     width: 3200px;
+    height: auto;
 }
 
 span {
     display: block;
-    background-color: red;
+    border: solid red 3px; 
     width: 305px;
     height: 86px;
     font-size: 12pt;
@@ -78,36 +76,31 @@ span {
     text-transform: uppercase;
     float: left;
     margin-right: 50px;
+    cursor: pointer;
 }
 
-p {
-    color: green;
-}
+p {color: green;}
 
 .ice-container {
+    background: orange;
     width: 100%;
-    border-radius: 10px;
     margin: auto;
-}
-.ice-container:hover {
-    box-shadow: 0px 0px 80px rgb(255, 255, 255);
-    transition: all 0.2s ease-in-out;
 }
 
 .ice-title {display: none;}
 .ice-title.active {display: block;}
 
-.ice-material {display: none;}
-.ice-material.active {display: block;}
-
+/* gem-shape */
 .ice-time {display: none;}
 .ice-time.active {display: block;}
 
-.js-reset {
-    border: 10px solid pink;
-    padding: 1rem;
-}
+/* gem-color */
+.ice-material {display: none;}
+.ice-material.active {display: block;}
 
+.js-reset {
+    border: 5px solid pink;
+}
 
 img {
     display: block;
