--- a/css/timeline.css
+++ b/css/timeline.css
@@ -15,19 +15,27 @@ h1 {
 }
 
 nav {
-    font-size: 12pt;
+    font-size: 18pt;
     font-weight: 400;
     font-style: normal ;
     text-align: left;
     letter-spacing: 4pt;
     text-transform: uppercase;
-    line-height: 2rem;
+    line-height: 3rem;
     text-indent: -2.5rem;
 }
 
 ul {list-style: none;}
 
-a {color: white;}
+a {
+    color: white;
+    opacity: 0.5;
+    text-decoration: none;
+}
+a:hover {
+    color: white;
+    opacity: 1;
+}
 
 /* nav {
     font-size: 12pt;
@@ -49,7 +57,7 @@ li {
 } */
 
 .js-container {
-    border: solid blue 3px; 
+    /* border: solid blue 3px;  */
     width: 3200px;
     height: auto;
     display: grid;
@@ -65,7 +73,7 @@ li {
 
 span {
     display: block;
-    border: solid red 3px; 
+    /* border: solid red 3px;  */
     width: 305px;
     height: 86px;
     font-size: 12pt;
@@ -76,10 +84,10 @@ span {
     text-transform: uppercase;
     float: left;
     margin-right: 50px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
-p {color: green;}
+/* p {color: green;} */
 
 .ice-container {
     background: orange;
@@ -99,7 +107,7 @@ p {color: green;}
 .ice-material.active {display: block;}
 
 .js-reset {
-    border: 5px solid pink;
+    border: 1px solid pink;
 }
 
 img {
