--- a/css/timeline.css
+++ b/css/timeline.css
@@ -35,6 +35,7 @@ a {
 a:hover {
     color: white;
     opacity: 1;
+    transition: all 0.2s ease-in-out;
 }
 
 /* nav {
@@ -56,65 +57,135 @@ li {
     border: solid blue 5px;
 } */
 
-.js-container {
-    /* border: solid blue 3px;  */
+/* .js-container {
+    border: solid blue 2px; 
     width: 3200px;
     height: auto;
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-gap: 20px;
+    column-gap: 50px;
+    row-gap: 20px;
     margin: 50px auto;
-}
+} */
 
-.js-filter  {
+/* .js-container {
+    border: solid blue 2px; 
     width: 3200px;
     height: auto;
+
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+} */
+
+.js-filter-material  {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-column-gap: 50px;
 }
 
 span {
-    display: block;
     /* border: solid red 3px;  */
     width: 305px;
     height: 86px;
     font-size: 12pt;
     font-weight: 400;
     font-style: normal ;
-    text-align: center;
     letter-spacing: 4pt;
     text-transform: uppercase;
+    text-align: center;
     float: left;
-    margin-right: 50px;
     /* cursor: pointer; */
 }
 
-/* p {color: green;} */
-
-.ice-container {
-    background: orange;
-    width: 100%;
-    margin: auto;
+.js-filter-time  {
+    /* border: solid yellow 3px;  */
+    width: 305px;
+    height: auto;
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    grid-row-gap: 20px;
+    font-size: 12pt;
+    font-weight: 400;
+    font-style: normal;
+    text-align: left;
+    letter-spacing: 4pt;
+    float: left;
+}
+.time {
+    /* border: solid lightblue 3px;  */
+    width: 305px;
+    /* total height = 203px */
+    height: 107px;
+    padding-top: 96px;
+    /* cursor: pointer; */
 }
 
-.ice-title {display: none;}
-.ice-title.active {display: block;}
+/* .ice-container {
+    position: absolute;
+    border: solid orange 3px; 
+    4000-305-50 = 3645
+    width: 3645px;
+    height: auto;
+    margin: 0 355px;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    grid-gap: 20px;
+} */
 
-/* gem-shape */
-.ice-time {display: none;}
-.ice-time.active {display: block;}
+/* .img-container {
+    position: relative;
+    display: block;
+    background: red;
+    width: 4000px;
+    height: auto;
+    margin-left: 355px;
+    margin-bottom: 20px;
+    float: left;
+} */
 
-/* gem-color */
-.ice-material {display: none;}
-.ice-material.active {display: block;}
-
-.js-reset {
-    border: 1px solid pink;
+.img-container {
+    position: absolute;
+    /* border: solid orange 3px;  */
+    margin: 0 360px;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-column-gap: 50px;
+}
+.ice_material {
+    /* border: solid blue 3px;  */
+    width: 305px;
+    height: auto;
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    grid-row-gap: 20px;
 }
 
+.ice-img {
+    width: 305px;
+    height: 203px;
+    object-fit: cover;
+}
 img {
     display: block;
     width: 100%;
     height: auto;
-    margin: auto;
+}
+
+.ice-title {display: none;}
+/* .ice-title.active {display: block;} */
+
+/* gem-shape */
+.ice-time {display: none;}
+/* .ice-time.active {display: block;} */
+
+/* gem-color */
+.ice-material {display: none;}
+/* .ice-material.active {display: block;} */
+
+.js-reset {
+    color: rgba(0, 0, 0);
 }
 
 @media only screen and (max-width: 812px) {  
